--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
     <div class="salutations">
         <div class=" container rt">
             <div class="sides">
-            <img src="assets/5.svg" alt="" srcset="" class="img-fluid">
+            <img src="assets/5.svg" alt="" srcset="" class="img-fluid holi">
             </div>
             <div class="maa">
                 <img src="/assets/saraswati (1).png" alt="" class="img-fluid">
